--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "eslint ./ --fix"
   },
   "dependencies": {
+    "framer-motion": "^4.1.4",
     "next": "latest",
+    "prop-types": "^15.7.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-is": "^16.8.0",
